# Client--Server-threads

./: README.md
Server/: CMakeLists.txt  pom.xml
Server/Database/: Movies.json  Users.json
Server/src/test/resources/AdvancedServerConnectionsTest/Client*/: Client*_commands  Client*_testResults
Server/src/test/resources/AdvancedTwo_UTBP_Test/Client*/: Client*_commands  Client*_testResults
Server/src/test/resources/AdvancedTwo_UTBP_Test/Result_Database/: Users.json
Server/src/test/resources/Advanced_Addmovie_Test/Client*/: Client*_commands  Client*_testResults
Server/src/test/resources/Advanced_Addmovie_Test/Result_Database/: Movies.json
Server/src/test/resources/Advanced_ChangePrice_Test/Client*/: Client*_testResults
Server/src/test/resources/Advanced_ChangePrice_Test/Database/: Movies.json
Server/src/test/resources/Advanced_ChangePrice_Test/Result_Database/: Movies.json
Server/src/test/resources/Advanced_Remmovie_Test/Client*/: Client*_commands  Client*_testResults
Server/src/test/resources/Advanced_Rent_Test/Client*/: Client*_responses  Client*_testResults
Server/src/test/resources/Advanced_Rent_Test/Database/: Movies.json
Server/src/test/resources/Advanced_Return_Test/Client*/: Client*_commands  Client*_testResults
Server/src/test/resources/Advanced_Server_Client_Test/Client*/: Client*_testResults
Server/src/test/resources/Advanced_UTBP_Test/Client0/: Client0_commands  Client0_responses  Client0_testResults
Server/src/test/resources/Basic_Rent_Test/Client0/: Client0_broadcasts  (+2 more)
Server/src/test/resources/Intermediate_UTBP_Test/: temp.txt
(+166 files in other folders)
